# keypears

./: .dockerignore  .env.dev  .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  MARKETING.md  NOTICE  README.md  TODO.md  TRADEMARKS.md  audit.md  biome.json  chat-2025-09-14-12-58-15.md  chat-2025-09-28-12-42-32.md  components.json  docker-compose.yml  drizzle.clear.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude/agents/: adversarial-reviewer.md
api/: Cargo.toml
api-client/: eslint.config.mjs  package.json  tsconfig.json
api-client/src/: client.ts  index.ts  schemas.ts
api-server/: .env.development  .env.production  Cargo.toml  drizzle-clear.config.ts  eslint.config.mjs  package.json  tsconfig.test.json  vitest.config.ts
api-server/src/: client.ts  constants.ts  derivation-keys.ts  index.ts  validation.ts  zod-schemas.ts
api-server/src/db/: index.ts  schema.ts
api-server/src/db/models/: channel.ts  device-session.ts  engagement-key.ts  inbox-message.ts  pow-challenge.ts  secret-update.ts  vault.ts
api-server/src/lib/: verify-pow.ts
api-server/src/procedures/: base.ts  blake3.ts  check-name-availability.ts  create-derived-key.ts  create-engagement-key.ts  create-secret-update.ts  delete-inbox-messages.ts  get-channel-messages.ts  get-channels.ts  get-counterparty-engagement-key.ts  get-derivation-privkey.ts  get-derived-keys.ts  get-engagement-key-by-pubkey.ts  get-engagement-key-for-sending.ts  get-engagement-keys.ts  get-inbox-messages-for-sync.ts  get-pow-challenge.ts  get-secret-updates.ts  get-sender-channel.ts  get-vault-info-public.ts  get-vault-info.ts  get-vault-settings.ts  login.ts  logout.ts  register-vault.ts  send-message.ts  update-channel-min-difficulty.ts  update-channel-status.ts  update-vault-settings.ts  verify-engagement-key-ownership.ts  verify-pow-proof.ts
api-server/test/: auth.test.ts  blake3.test.ts  channel.test.ts  device-session.test.ts  engagement-key.test.ts  global-setup.ts  inbox-message.test.ts  manual-test.ts  pow-challenge.test.ts  secret-update.test.ts  secure-channel.test.ts  server.ts  vault.test.ts
api-server/test/helpers/: engagement-key.ts  solve-pow.ts  test-vault.ts
api/src/: main.rs
docs/: astro.config.mjs  audit.md  auth.md  business.md  chat-2025-08-09-07-51-54.md  code.md  crypto.md  data.md  deployment.md  design-patterns-crypto.md  design-patterns-data.md  design-patterns.md  dev-setup.md  dh.md  engagement-keys.md  federation.md  fund-raising.md  identellica.css  identellica.md  kdf.md  key-derivation.md  marketing.md  messages.md  mvp.md  orpc-contract-define.md  orpc-contract-implement.md  orpc-contract-route.md  orpc.md  package.json  pow.md  pow5.md  sha256.md  shadcn-tools.md  task-third-party.md  uiux.md  vault-keys.md  vision.md  webbuf.md
docs/chat/: aws.md  eslint-crypto-error.md  secure-lowercase-password.md  set-up-eslint.md  shadcn-catppuccin.md  sync.md  zod-schema-log.md
epics/0000-template/: README.md
infra/: README.md  deploy.sh  inventory.md
infra/terraform/: .gitignore  acm.tf  backend.tf  dns.tf  ecr.tf  ecs.tf  edge.tf  iam.tf  locals.tf  logs.tf  network.tf  outputs.tf  providers.tf  secrets.tf  security.tf  terraform.tfvars.example  variables.tf  waf.tf
issues/: README.md
issues/0001-email-architecture/: README.md
issues/0002-security-audit/: README.md
keypears-lib/: .eslintrc.json  eslint.config.mjs  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
keypears-tauri/: components.json  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
keypears-webapp/: package.json
kp1/: .dockerignore  AGENTS.md  Cargo.toml  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
lib/: eslint.config.mjs  package.json  tsconfig.src.json
lockberries/: astro.config.mjs  package.json
passapples/: package.json
pow5-rs/: Cargo.toml
pow5-rs/src/: lib.rs
pow5-ts/: eslint.config.mjs  package.json  vite.config.ts
rs-api-client/: Cargo.toml
rs-api-client/src/: client.rs  error.rs  lib.rs  models.rs
rs-api-client/tests/: integration_test.rs
rs-lib/: Cargo.toml
rs-node/: Cargo.toml
rs-node/src/: main.rs
rs-tauri/: Cargo.toml  tauri.conf.json
scripts/: build-api-linux.sh  build-issues-index.sh  setup-cross-compile.sh
src/: globals.css  routeTree.gen.ts  server.ts
tauri/: .gitignore  drizzle.config.ts  package.json
tauri-rs/: Cargo.toml  tauri.conf.json
tauri-rs/capabilities/: default.json
tauri-rs/src/: lib.rs  main.rs
tauri-ts/: components.json  eslint.config.mjs  package.json  src-tauri  tauri-dev.sh  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
ts/: pnpm-workspace.yaml
ts-lib/: tsconfig.json
ts-node/: drizzle-clear.config.ts  drizzle.config.ts  package.json  tsconfig.src.json  tsconfig.src.tsbuildinfo  tsconfig.test.tsbuildinfo
ts-tauri/: package.json  src-tauri  tauri.md  vite.config.ts
ts-webapp/: .env.development  .env.production  .env.staging  drizzle-clear.config.ts  drizzle.config.ts  package.json  server.ts
web-kp/: .env.development  Dockerfile  docker-compose.yml  eslint.config.mjs  package.json  server.ts
web-pa/: .env.development  .gitignore  docker-compose.yml  package.json  server.ts
webapp/: .env.dev  .env.dev.passapples  .env.development  .env.e2e  .env.e2e.passapples  .env.prod  .env.production  .env.staging  .env.test  .oxlintrc.json  .prettierignore  Dockerfile  build-blog.ts  drizzle.config.ts  package.json  playwright.config.ts  process-icons.ts  server.js  server.ts  start-node.js  start.sh  tsconfig.json  vite.config.ts
whitepaper/: keypears.typ  marlinspike-2016-ecosystem-is-moving.html  references.yml
www-keypears-com/: Dockerfile  package.json  pnpm-lock.yaml
(+722 files in other folders)
