[workspace]
members = ["rs-lib", "api", "tauri/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Identellica LLC"]

[workspace.dependencies]
# Shared library
rs-lib = { path = "./rs-lib" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (for API)
axum = "0.7"

# Cryptography
blake3 = "1.5"

# Tauri (for tauri app)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
