[workspace]
members = ["rs-lib", "api", "tauri/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Identellica LLC"]

[workspace.dependencies]
# Shared library
rs-lib = { path = "./rs-lib" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (for API)
axum = "0.8.6"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Cryptography
blake3 = "1.5"
hex = "0.4"
base64 = "0.22"

# Tauri (for tauri app)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
