[workspace]
members = ["rs-lib", "rs-node", "rs-tauri", "rs-api-client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Identellica LLC"]

[workspace.dependencies]
# Shared library
rs-lib = { path = "./rs-lib" }
rs-api-client = { path = "./rs-api-client" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (for API)
axum = "0.8.6"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Cryptography
blake3 = "1.5"
hex = "0.4"
base64 = "0.22"

# HTTP client (for API client)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tauri (for tauri app)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
