[package]
name = "api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rs-lib.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
hex.workspace = true
base64.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"
