[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rs-lib.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"
