[package]
name = "keypears_pow5"
description = "KeyPears Proof-of-Work (PoW) Algorithm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10.8"
wasm-bindgen = { version = "0.2" }
hex = "0.4.3"

[dev-dependencies]
blake3 = "1.5.5"
