[package]
name = "rs-api-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rs-lib.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
hex.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
mockito = "1.0"
