[package]
name = "KeyPears"
version.workspace = true
description = "KeyPears - Federated Diffie-Hellman Key Exchange System"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keypears_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-opener.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri-plugin-sql.workspace = true
tauri-plugin-os.workspace = true
clap = { version = "4.5", features = ["derive"] }
shellexpand = "3.1"

